# wjpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: example_01_quickstart.py  example_02_sign_inversion_detection.py  example_03_pairing_family_type1_gap.py  example_04_rolling_regime_trajectory.py
tests/: test_core.py
wjpy/: __init__.py  core.py
